--- a/server/package.json
+++ b/server/package.json
@@ -10,28 +10,37 @@
     "test": "jest",
     "lint": "eslint . --ext .ts"
   },
-  "keywords": ["clothing", "deals", "web-scraping", "e-commerce"],
+  "keywords": [
+    "clothing",
+    "deals",
+    "web-scraping",
+    "e-commerce"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "typescript": "^5.0.0",
-    "ts-node": "^10.9.1",
-    "@types/node": "^18.0.0",
+    "@types/axios": "^0.9.36",
+    "@types/cheerio": "^0.22.35",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
-    "mongoose": "^7.0.0",
-    "dotenv": "^16.0.3",
+    "@types/node": "^18.0.0",
+    "axios": "^1.9.0",
+    "cheerio": "^1.1.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mongoose": "^7.0.0",
     "puppeteer": "^19.0.0",
-    "@types/cors": "^2.8.13"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.0"
   },
   "devDependencies": {
-    "ts-node-dev": "^2.0.0",
     "@types/jest": "^29.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "eslint": "^8.0.0",
     "jest": "^29.0.0",
     "ts-jest": "^29.0.0",
-    "eslint": "^8.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.0.0"
+    "ts-node-dev": "^2.0.0"
   }
 }
