--- a/server/package.json
+++ b/server/package.json
@@ -20,15 +20,19 @@
   "license": "ISC",
   "dependencies": {
     "@types/axios": "^0.9.36",
+    "@types/bcryptjs": "^2.4.6",
     "@types/cheerio": "^0.22.35",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^18.0.0",
     "axios": "^1.9.0",
+    "bcryptjs": "^3.0.2",
     "cheerio": "^1.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.0.0",
     "puppeteer": "^19.0.0",
     "ts-node": "^10.9.1",
